--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^2.2.0",
+    "bcryptjs": "^3.0.3",
+    "body-parser": "^2.2.1",
     "chai": "^6.2.0",
+    "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
-    "express": "^5.1.0",
+    "express": "^5.2.1",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.2",
+    "jsonwebtoken": "^9.0.3",
     "method-override": "^3.0.0",
     "mocha": "^11.7.3",
     "mysql": "^2.18.1",
